<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_dialog">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="3dp"
        android:paddingBottom="3dp"
        android:paddingTop="3dp"
        android:background="#212121"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_dialog_title"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:textSize="18sp"
            android:layout_centerVertical="true"/>
        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/suit"
            android:layout_alignParentRight="true"
            />
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dialog_message"
        android:textColor="#ffffff"
        android:gravity="center"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>
    <TextView
        android:id="@+id/btn_try_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_dialog_button_no"
        android:background="@drawable/bg_dialog"
        android:padding="10dp"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <TextView
        android:id="@+id/btn_try_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:text="@string/txt_dialog_button_yes"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/btn_try_later"
        android:padding="10dp"
        android:background="@drawable/bg_dialog"
        android:layout_marginRight="20dp"
        android:textColor="#ffffff"/>
</android.support.constraint.ConstraintLayout>